--- a/SmartBuild/ClientApp/package.json
+++ b/SmartBuild/ClientApp/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@material-ui/core": "^1.4.0",
     "@material-ui/icons": "^1.1.0",
+    "axios": "^0.18.0",
     "bootstrap": "^3.3.7",
     "react": "^16.4.1",
     "react-bootstrap": "^0.31.5",
